fixed spacing on product details

--- a/src/pages/product-page/product-page.module.scss
+++ b/src/pages/product-page/product-page.module.scss
@@ -21,8 +21,9 @@
     flex-direction: column;
     align-items: start;
     padding-top: 20px;
-    justify-content: space-between;
+    justify-content: start;
     flex: 1;
+    gap: 40px;
 }
 
 .productDetailsBtn {
